# checkers

./: .env.example  .gitignore  ROADMAP.md  SETUP.md  nixpacks.toml  package.json  pnpm-lock.yaml  railway.json  turbo.json
.claude/: settings.local.json
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/middleware/: admin.ts  auth.ts
apps/api/src/routes/: admin.ts  auth.ts  chain.ts  chat.ts  events.ts  games.ts  jackpot.ts  referrals.ts  shop.ts  users.ts  vip.ts
apps/api/src/services/: config.service.ts  events.service.ts  indexer.ts  jackpot.service.ts  referral.service.ts  relayer.ts  sequence-manager.ts  session.service.ts  shop.service.ts  stuck-recovery.ts  timeout-checker.ts  treasury.service.ts  vip.service.ts
apps/api/src/ws/: handler.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(main)/: layout.tsx  page.tsx
apps/web/src/contexts/: wallet-context.tsx
apps/web/src/hooks/: use-board-theme.ts  use-navigation-block.ts  use-web-wallet.ts  use-websocket.ts
apps/web/src/lib/: admin-api.ts  api.ts  auth-headers.ts  chain-actions.ts  chain-tx.ts  sounds.ts  wallet-core.ts  wallet-signer.ts
contracts/checkers-vault/: .gitignore  Cargo.toml
contracts/checkers-vault/artifacts/: checkers_vault.wasm
contracts/checkers-vault/scripts/: strip-bulk-memory.js
contracts/checkers-vault/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
scripts/: deploy-contract.ts  grant-authz.sh  instantiate-contract.ts
(+42 files in other folders)
